# CasFly

./: .gitignore  README.md  run_results_reproduction.sh
.github/workflows/: ci.yml
CasFly_IoTJ/: README.md  REPRODUCIBILITY.md  analyze_chain_results.ipynb  analyze_scalability.py  build_device_lookup.py  compare_pcmci_lave.py  compute_conditional_probs.py  distribute.py  eval_compare_chains.py  evaluate_predictive_metrics.py  extract_cause_effect_pairs.py  filter_patients.py  make_comparison_plots.py  partition_patients_to_devices.py  plot_scalability_ci.py  repeat_scalability_for_ci.py  reproduce_casfly_results.sh  run_experiment.sh  scalability_sweep.py  simulate_chain_timing.py  unpack_mimic_data.py
CasFly_IoTJ/mimic_variant/: collect_and_validate.py  config.yaml  initiate_mimic.sh  launch_devices.sh  make_plots.py  run_all.sh  run_baselines.py  scalability_emulation.py
CasFly_tool/: .gitignore  CITATION.cff  README.md
CasFly_tool/.github/workflows/: ci.yml
CasFly_tool/sdk/: README.md  pyproject.toml
CasFly_tool/sdk/examples/: csv_driven_demo.py  distributed_demo.py  smartwatch_bp_cuff_demo.py
CasFly_tool/sdk/examples/data/: bp_cuff_events.csv  bp_cuff_events.fhir.json  routing_table.csv  smartwatch_events.csv  smartwatch_events.json
CasFly_tool/sdk/service/: Dockerfile  requirements.txt
CasFly_tool/sdk/service/casfly_service/: app.py
CasFly_tool/sdk/src/casfly_sdk/: __init__.py  cli.py  device.py  lag.py  lave.py  lookup.py  models.py  node.py  orchestrator.py  protocol.py  tphg.py  utils.py  validate.py
CasFly_tool/sdk/tests/: test_cli.py  test_device.py  test_export.py  test_lave.py  test_orchestrator.py  test_utils.py  test_validate.py
evaluation/: compare_pcmci_lave_tau.py  evaluate_predictive_and_hits.py  requirements-results-repro.txt
sdk/: README.md  pyproject.toml
sdk/service/: .dockerignore  Dockerfile  sample_trace_request.json
sdk/service/casfly_service/: app.py  schemas.py
sdk/src/casfly_sdk/: __init__.py  lave.py  lookup.py  models.py  node.py  orchestrator.py  tphg.py
