[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casfly-sdk"
version = "0.1.0"
description = "Application-agnostic SDK for decentralized causal chain tracing with TPHG and LaVE"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "CasFly Contributors"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
